src/test/deca/context/valid/OpBoolean.deca
// Description:
//    test operation boolean incorrecte 
//
// Resultats:
//      Incompatible types, must be boolean
// 
// Historique:
//    cree le 01/01/2022

{
    boolean a=true;
    boolean b=false;
    boolean c=((a && b) || a) && b ; 
    
}