src/test/deca/context/invalid/OpBoolean2.deca
// Description:
//    test operation boolean incorrecte 
//
// Resultats:
//      Incompatible types, must be boolean
// 
// Historique:
//    cree le 01/01/2022

{
    float a=50;
    boolean b= false && a;
}